# simple-obs-stt

./: .browserslistrc  10.b9b2cf7c34c0b0713237.js  100.09676f9c8112b17a9cf5.js  102.236284e0c0117d84a589.js  102.3acddae8819c882fa0e9.js  102.3e7eb5285652a057e421.js  102.7bf789914172954f9b7b.js  11.08f58b9e170bbda10b9d.js  12.194e5c068fdc7bc02575.js  123.2eeaefbd7d7a231000c1.js  13.c7c799e0197504e2ae0f.js  14.aa3fc912b6f09e289f49.js  15.74da56ead7a56ea87147.js  220.16913e682324b1f5c333.js  220.6acd53c61e238d634963.js  220.acddc9552c6c44907f42.js  220.f411e31dc1f6a17c22f5.js  3.8f2a549a5394c7b55a59.js  324.75b83c67904e0d65624f.js  336.5652ba303d05394aba94.js  336.5795c931a2890198124b.js  361.34345115f2cbb6514584.js  361.929ac55ac6d8c0012f2b.js  361.b34d09cd1240c6b064ea.js  361.c1824819b2e12a30fa9a.js  361.ce46eafd273a5caf37ac.js  3rdpartylicenses.txt  4.4dcc87e34fdadbcb002c.js  4.4ef07c0e2218fa74b82f.js  4.bd0c36c76452c3149458.js  4.bfb0300112c8607a0146.js  4.ef44e4a51bcb97c2c38d.js  404.html  426.000fbb59c93f1ccd57e9.js  426.13cfa96ad6d6521c85ba.js  426.42b582cb3deffa498a03.js  426.4d73a52230c4fdd2a2a7.js  426.616704e592e73ca4714f.js  426.6a4108902691beae9a46.js  426.76e34ec28f5297c67f5b.js  (+398 more)
.github/: FUNDING.yml
.github/workflows/: build-app.yml  build-native.yml  build-web.yml  main.yml
assets/client/: index.html  index.js
assets/css/: style.css
assets/server/: index.html  index.js
src/: 404.html  index.html  main.ts  manifest.webmanifest  oauth_twitch.html  polyfills.ts  styles.css  zone-config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Cargo.toml  build.rs
src-tauri/icons/: icon.icns
src-tauri/src/: asset_server.rs  main.rs  main.wxs  ws_handler.rs
src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.init.ts  app.module.ts
src/app/components/editor/: editor.component.html  editor.component.ts
src/app/components/radial-progress/: radial-progress.component.html  radial-progress.component.ts
src/app/pipes/: sanitize-html.pipe.ts
src/app/utils/: clear_sw_cache.ts  client_type.ts  popper_max_size.ts  scroll.ts  types.ts
src/client/: index.html  index.ts
src/css/: style.css
src/environments/: EnvType.ts  environment.prod.ts  environment.production.ts  environment.tauri.ts  environment.ts
src/server/: index.html  index.ts
(+52 files in other folders)
