[package]
name = "app"
version = "0.1.0"
description = "SimpleSTT"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
bindings = {path = "bindings"}
windows = "0.19.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["shell-open", "window-all"] }

globset = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
warp = "0.3.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
